--- a/printing/pubspec.yaml
+++ b/printing/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   image: ^3.0.2
   js: ^0.6.3
   meta: ">=1.3.0 <2.0.0"
-  pdf: ^3.10.0
+  pdf: 
+    path: ../pdf
   plugin_platform_interface: ^2.1.0
 
 dev_dependencies:
@@ -34,9 +35,9 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.3.2
 
-dependency_overrides:
-  pdf:
-    path: ../pdf
+# dependency_overrides:
+#   pdf:
+#     path: ../pdf
 
 flutter:
   plugin:
