--- a/printing/pubspec.yaml
+++ b/printing/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   js: ^0.6.3
   meta: ">=1.3.0 <2.0.0"
   pdf: 
-    path: ../pdf
+    path: ./pdf
   plugin_platform_interface: ^2.1.0
 
 dev_dependencies:
