--- a/printing/pubspec.yaml
+++ b/printing/pubspec.yaml
@@ -25,8 +25,6 @@ dependencies:
   image: ^3.0.2
   js: ^0.6.3
   meta: ">=1.3.0 <2.0.0"
-  pdf: 
-    path: ./pdf
   plugin_platform_interface: ^2.1.0
 
 dev_dependencies:
@@ -35,9 +33,9 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.3.2
 
-# dependency_overrides:
-#   pdf:
-#     path: ../pdf
+dependency_overrides:
+  pdf:
+    path: ../pdf
 
 flutter:
   plugin:
